--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,9 @@ android {
     compileSdkVersion 26
     defaultConfig {
         minSdkVersion 14
+        targetSdkVersion 26
+        versionCode 8
+        versionName "1.1.1"
     }
 }
 
