fixe the bug of activity unregister

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,20 +2,25 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="com.eye.cool.photo">
 
-  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-  <application
-    android:allowBackup="true">
+  <application android:allowBackup="true">
     <provider
+      android:name="android.support.v4.content.FileProvider"
       android:authorities="${applicationId}.FileProvider"
       android:exported="false"
-      android:grantUriPermissions="true"
-      android:name="android.support.v4.content.FileProvider">
+      android:grantUriPermissions="true">
       <meta-data
         android:name="android.support.FILE_PROVIDER_PATHS"
-        android:resource="@xml/file_paths"/>
+        android:resource="@xml/file_paths" />
     </provider>
+
+    <activity
+      android:name="com.eye.cool.photo.PhotoPickerDialog"
+      android:exported="false"
+      android:launchMode="singleTask"
+      android:theme="@style/DialogActivity" />
   </application>
 
 </manifest>
