--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,13 +10,13 @@ android {
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 28
-        versionCode 11
-        versionName "1.2.2"
+        versionCode 12
+        versionName "1.3.0"
     }
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     api 'com.github.wshychbydh:permission:1.1.0'
 }
