--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ group = 'com.github.wshychbydh'
 
 android {
     compileSdkVersion 29
+    resourcePrefix 'photo_'
     defaultConfig {
         minSdkVersion 12
         targetSdkVersion 29
@@ -20,6 +21,6 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
