--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
     defaultConfig {
         minSdkVersion 12
         targetSdkVersion 29
-        versionCode 23
-        versionName "1.4.1"
+        versionCode 24
+        versionName "1.4.2"
     }
 
     lintOptions {
@@ -23,4 +23,5 @@ android {
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
 }
