--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
-apply plugin: 'com.android.library'
-
-apply plugin: 'kotlin-android'
-
-apply plugin: 'com.github.dcendents.android-maven'
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+    id 'com.github.dcendents.android-maven'
+}
 group = 'com.github.wshychbydh'
 
 android {
@@ -11,13 +11,26 @@ android {
     defaultConfig {
         minSdkVersion 12
         targetSdkVersion 30
-        versionCode 29
-        versionName "1.5.1"
+        versionCode 30
+        versionName "1.5.2"
     }
 
     lintOptions {
         ignoreWarnings true
     }
+
+    kotlinOptions {
+        suppressWarnings = true
+    }
+}
+
+task androidSourcesJar(type: Jar) {
+    archiveClassifier = 'sources'
+    from android.sourceSets.main.java.srcDirs
+}
+
+artifacts {
+    archives androidSourcesJar
 }
 
 dependencies {
